# axiom-cli

./: .gitignore  axiom.bat  axiom.py  pyproject.toml  test_integration.py  verify_mirrored.py  verify_production.py
axiom/: __init__.py  main.py
axiom/cli/: __init__.py  app.py  banner.py  input_handler.py  renderer.py  theme.py  tool_approval.py  voice_input.py
axiom/config/: __init__.py  defaults.py  settings.py
axiom/core/: __init__.py
axiom/core/agent/: __init__.py  auto_selector.py  graph.py  parallel.py  state.py  tracer.py
axiom/core/agent/nodes/: __init__.py  executor.py  learner.py  observer.py  planner.py  synthesizer.py
axiom/core/agent/prompts/: system.py
axiom/core/llm/: __init__.py  council.py  model_switcher.py  router.py
axiom/core/mcp/: __init__.py  bridge.py  client.py  discovery.py
axiom/core/memory/: __init__.py  context_compressor.py  conversation_store.py  file_memory.py  manager.py  message_bus.py  task_store.py  vector_store.py
axiom/core/skills/: __init__.py  injector.py  loader.py
axiom/core/tools/: __init__.py  agent_spawn.py  base.py  bash.py  browser.py  code_exec.py  desktop.py  files.py  git.py  http.py  mcp_client.py  memory_tool.py  registry.py  research.py  self_repair.py  think.py  tool_create.py  vision.py  web_fetch.py
axiom/integrations/: __init__.py
axiom/integrations/heartbeat/: __init__.py  daemon.py
axiom/integrations/telegram/: __init__.py  bridge.py  formatter.py  handler.py
docs/plans/: 2026-03-06-axiom-ascension-design.md  2026-03-06-axiom-ascension-implementation.md
mcp_servers/: servers.json
tests/: conftest.py  test_defaults.py  test_full_startup.py  test_model_switcher.py  test_production_hardening.py  test_router.py  test_settings.py  test_stress.py
